--- a/assignment_4.ipynb
+++ b/assignment_4.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Exercise 1: \n",
-    "For the code, please visit my forked Github-repo here: "
+    "For the code, please visit my forked Github-repo here: https://github.com/benrodion/my_flask_app_assignment_4.git"
    ]
   }
  ],
