--- a/assignment_4.ipynb
+++ b/assignment_4.ipynb
@@ -20,7 +20,12 @@
    "metadata": {},
    "source": [
     "## Exercise 1: \n",
-    "For the code, please visit my forked Github-repo here: https://github.com/benrodion/my_flask_app_assignment_4.git"
+    "For the code, please visit my forked Github-repo here: https://github.com/benrodion/my_flask_app_assignment_4.git\n",
+    "\n",
+    "\n",
+    "It is 2019 and I am working for the Green Party in England, which is analyzing the results of the recent election. Specifically, the campaign manager would in a first step like to get an overview of how well the Green Party did in the various constituencies. The goal of this is to identify both, the party's strongholds as well as constituencies in which it is weak and on which it should perhaps focus more in its next campaign. The graph will therefore play a role in setting the priorities for future campaigns. To provide an overview, I will plot the vote share of the Greens for all constituencies in ascending order.  \n",
+    "\n",
+    "In a second step, the campaign manager wants to know how demographic factors influence the popularity of the Greens. More precisely, she has seen a [Statista](https://www.statista.com/statistics/1379439/uk-election-polls-by-age/) graph (from the future) indicating that the Greens have a popularity problem among the elderly. Now she would like to verify this using the data from the recent election. To help her identify a potential pattern between Green Party support and the amount of elderly citizens in a constituency, I will create a scatterplot, which will give her a good first idea of a potential correlation between these two variables. The graph will help her better understand if indeed a higher population share of retired citizens goes hand in hand with a lower vote share of the Green Party. Should this be the case and should further investigations support this, she could take measures to increase her party's popularity in this demographic. \n"
    ]
   },
   {
@@ -83,8 +88,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dsa",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
